# contextcheck

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main_tui.py  pyproject.toml  scenario1.yml  setup.py  test_scenario_vertexai.yaml
contextcheck/: __init__.py  question_answering.py  questions_generator.py  run_tests.py
contextcheck/assertions/: assertions.py  factory.py  llm_eval_prompts.py  llm_metrics.py  metrics.py  settings.py  utils.py
contextcheck/connectors/: connector.py  connector_echo.py  connector_http.py  connector_openai.py  connector_openai_compatible.py  connector_vertexai_compatible.py
contextcheck/endpoints/: endpoint.py  endpoint_cc.py  endpoint_cc_prompt_llm.py  endpoint_config.py  endpoint_dummy_echo.py  endpoint_ollama.py  endpoint_openai.py  endpoint_openai_compatible.py  endpoint_tg_chatbot.py  endpoint_vertexai_compatible.py  factory.py
contextcheck/executors/: executor.py  tests_router.py
contextcheck/generators/: cc_api_wrapper.py  endpoint_wrapper.py  generate_answers.py  generate_questions.py  utils.py
contextcheck/interfaces/: interface.py  interface_output_file.py  interface_tui.py
contextcheck/loaders/: yaml.py
contextcheck/models/: messages.py  models.py  request.py  response.py
docs/: ABOUT_DOCS.md  mkdocs.yml
docs/docs/: index.md
docs/docs/getting_started/: applications_and_use_cases.md  full_cycle_process.md  lmm_prompts_validation.md  rag_system_validation.md
docs/docs/user_guide/: deterministic_metrics.md  llm_based_metrics.md  metrics.md  questions_generator.md  rag_configuration.md  test_scenarios.md
examples/: ex1.ipynb
tests/: conftest.py  pytest.ini  scenario0.yml  scenario_cc_prompt_llm.yaml  scenario_cc_prompt_llm.yml  scenario_cc_prompt_qa.yaml  scenario_cc_prompt_ss.yaml  scenario_defaults.yaml  scenario_defaults.yml  scenario_echo.yaml  scenario_example1.yaml  scenario_llm_eval.yaml  scenario_openai.yaml  scenario_openai.yml  scenario_tg_1.yml  scenario_tg_2.yaml  scenario_tg_qa1.yaml  test_assert.py  test_deterministric_metrics.py  test_echo_endpoint.py  test_eval_metrics.py  test_executor.py  test_json_validator.py  test_llm_eval.py  test_llm_metrics.py  test_loaders_yaml.py  test_openai_compatible_endpoint.py  test_questions_generator.py  test_tests_router.py  utils.py
