[tool.poetry]
name = "contextcheck"
version = "0.1.0"
description = "Validation and test framework for llm-based applications"
authors = ["Michal Tarkowski <michal.tarkowski@addepto.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
