[tool.poetry]
name = "contextcheck"
version = "0.1.0"
description = "Validation and test framework for llm-based applications"
authors = ["Michal Tarkowski <michal.tarkowski@addepto.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
pyyaml = "^6.0.1"
openai = "^1.30.1"
python-dotenv = "^1.0.1"
pytest-dotenv = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
