[tool.poetry]
name = "contextcheck"
version = "0.1.0"
description = "Validation and test framework for llm-based applications"
authors = ["Michal Tarkowski <michal.tarkowski@addepto.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
pyyaml = "^6.0.1"
openai = "^1.30.1"
langchain_community = "^0.2.4"
python-dotenv = "^1.0.1"
pytest-dotenv = "^0.5.2"
requests = "^2.31.0"
jinja2 = "^3.1.4"
rich = "^13.7.1"
loguru = "^0.7.2"
pylint = "^3.2.3"
black = "^24.4.2"
isort = "^5.13.2"
fsspec = "2024.3.1"
pre-commit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
lorem = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
preview = true    # Breaks strings that exceed the line length

[tool.pylint.format]
max-line-length = 100

[tool.pylint.MASTER]
load-plugins = "pylint.extensions.docparams"
ignore = '.vscode, .venv, venv, .git'

[tool.pylint.messages_control]
disable = [
    "arguments-differ",
    "attribute-defined-outside-init",
    "blacklisted-name",
    "duplicate-code",
    "fixme",
    "import-error",
    "no-member",
    "no-name-in-module",
    "protected-access",
    "stop-iteration-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    "abstract-method",
    "chained-comparison",
    "eval-used",
    "exec-used",
    "expression-not-assigned",
    "global-statement",
    "missing-docstring",
    "redefined-argument-from-local",
    "redefined-outer-name",
    "reimported",
    "too-many-ancestors",
    "unexpected-special-method-signature",
]

[tool.poetry.scripts]
ccheck = "contextcheck.run_tests:main"
questions_generator = "contextcheck.questions_generator:main"
